adding part about convex hulls distance mapping
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4686 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -217,7 +217,7 @@ The assumptions that DBAP are based on falls apart when sources move outside the
 
 From the description of louspeaker positions the \emph{convex hull} of the field of speakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}.
 
-For each source position it is first determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps needs to be taken. If the source is positioned outside the convex hull, the projection of the point onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for the projected point in further DBAP calculations. In addition the distance from the source position to the convex hull is returned. This value can be used for additional spatial processing such as gain attenuation, air filtering, doppler effect and gradual introduction of reverb with increasing distance from the hull.
+For each source position it is first determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps needs to be taken. If the source is positioned outside the convex hull, the projection of the point onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for the projected point in further DBAP calculations. In addition the distance from the source position to the convex hull is returned. This value can be used for additional spatial processing such as gain attenuation, air filtering, doppler effect and gradual introduction of reverb with increasing distance from the hull. Though, as there is no generic way to process these effect, as they are closely related to the desired perceptual or compositionnal result, the authors thought better to let this choice to the user.
 
 
 
