committing a few lines just to increase the rev. number before I go and make a tea break
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4688 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -288,8 +288,20 @@ But those pictures of spatial response of each loudspeaker need to be shown toge
 
 These pictures can be generated in realtime by the algorithm, and thus be used as an user interface for source positionning, e.g. for mouse interaction, or even better for tactile-screen interaction. 
 
-\section{further development}
+\section{Implementation}
 
+
+
+\section{Further development}
+
+Further listening tests and usage experimentations
+
+Hull Combination with weights : A hull is created for each source Including all speakers with non null weights
+Representation : Convex hulls : Spatial fade
+
+3D  
+
+Interfaces
 
 \section{Acknowledgements}
 
