--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -209,9 +209,7 @@ The blur coefficient $r_{s}$ can be understood as a displacement in vertical pos
 
 
 
-\subsection{Sources positioned beyond the range of the speakers}
-
-%TODO : fix cross-reference
+\subsection{Sources positioned beyond the field of speakers}
 
 The assumptions that DBAP are based on falls apart when sources move outside the field of speakers. As a source position moves away from the speakers, the relative difference in distance from source to each of the speakers diminishes, resulting in less and less difference in levels between the speakers, in much the same way as discussed for spatial blur in the previous subsection. In order to compensate for this, additional steps needs to be taken when the source move outside the field of speakers.
 
@@ -224,12 +222,19 @@ For each source position it is first determined if the source is outside the hul
 
 \subsection{Extending DBAP by introducing spatial weights}
 
-The initial idea behind \textit{spatial weights} was to use the DBAP algorithm on different subsets of loudspeakers for different sources, in a global sound diffusion system. This idea is partly coming from the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique}, for which a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music\cite{Prager:2002acousmatique}.
+In the discussion so far the algorithm has treated the speakers in a transparent way, aiming at reproducing virtual sound sources in the best way possible without any further considerations for other loudspeaker properties than position.
 
-Following this idea, the authors thought including such a loudspeaker-grouping system could be artistically promising, in order to create registers of loudspeakers as described above, or to define specific ``sonic geographies'' for different sources, by using different layers of loudspeakers for each of them. This is intended to allow a pre-defined spatial orchestration to be prepared in order to be later adapted to specific rooms\cite{Lyon:2008spatial_orchestration}. Another potential use of such loudspeakers layers could happen in installation or museum spaces, in order to diffuse sound sources both locally in one room, or all other the place.
+The extension of DBAP by introduction of \textit{spatial weights} enables a source to be restricted to use a subset of speakers. This might offer several artistic possibilities.
 
-Another requirement of this development was to create the possibility to define the subsets of loudspeakers dynamically, and not only as an initial setp, so that they could be changed during the composition process, as well as during the performance of the music. This led the authors to define these subsets individually for each sound source as an array of $n$ boolean values, indicating if each loudspeaker is part or not of the subset, $n$ being the total number or loudspeakers.
-The possibility of interpolating between subsets of loudspeakers was also a desired feature, in order to have smooth transitions between such ``sonic geographies'', which led to using floating point values in the computation of the array in the algorithm, rather than strict boolean values. 
+Within the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music \cite{Prager:2002acousmatique}. If the loudspeaker setup consist of different kinds of speakers with differing spectral properties, they can be thought of as an orchestra of speakers and grouped into different instrumental groups. Spatial weights can then be used to ensure that a source is spatialised among members of one group only. This allow a timbral and spatial orchestration to be prepared or composed beforehand, and then be adjusted to specific rooms for playback \cite{Lyon:2008spatial_orchestration}. 
+
+In installations or museum spaces spatial weights can be used to confine sources to restricted areas. For instance one source can be diffused in one room only while another source with a different set of spatial weights is permitted to move between several or all rooms.
+
+Spatial weights can be changed dynamically, thus allowing smooth transitions from one state to another. 
+
+
+
+
 
 Anticipating possible uses of floating point values for each loudspeaker, this parameter has been named as ``weights'' for each speaker, and implemented using the modification below of \ref{eq:calculate_k} :
 %TODO : clean up this equation - is k2inv the right term ? other ones ?
@@ -239,6 +244,7 @@ k2inv = k2inv + (x->src_weight[n][i]*x->src_weight[n][i])/(dia[i]*dia[i])
 
 %TODO : fix cross-reference
 This weight parameter, after being submitted to listening tests and visualization (as described below in\ref{subsection:Visual representation}), showed up as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
+
 The authors are also looking forward to obtaining a better numerical representation of this parameter, in particular of its range and transfer function, as well as to achieve a management of the interdependence of all weights, in order to make its manipulation more intuitive for the user.
 
 
@@ -295,7 +301,7 @@ But those pictures of spatial response of each loudspeaker need to be shown toge
 Figure \ref{figure:5spk_weights} illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
 
 \begin{figure}[ht]
-\centerline{\includegraphics[scale=0.5]{spk[5,8,9,10,11,12]_w[1.5,1.,1.,1.,0.75,1.2]}}
+\centerline{\includegraphics[scale=0.5]{spk_groups}}
 \caption{{\it Representation of the 2D distribution of levels for 5 speakers only, with different weights for each speaker : [1.5,1.,1.,1.,0.75,1.2] for speakers [5,8,9,10,11,12]}}  
 \label{5spk_weights}
 \end{figure}
