--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -222,13 +222,13 @@ For each source position it is first determined if the source is outside the hul
 
 \subsection{Extending DBAP by introducing spatial weights}
 
-In the discussion so far the algorithm has treated the speakers in a transparent way, aiming at reproducing virtual sound sources in the best way possible without any further considerations for other loudspeaker properties than position.
+In the discussions so far the DBAP algorithm has dealt with the speakers in a transparent way, aiming at reproducing virtual sound sources in the best way possible without any further considerations for any loudspeaker properties apart from position.
 
 The extension of DBAP by introduction of \textit{spatial weights} enables a source to be restricted to use a subset of speakers. This might offer several artistic possibilities.
 
-Within the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music \cite{Prager:2002acousmatique}. If the loudspeaker setup consist of different kinds of speakers with differing spectral properties, they can be thought of as an orchestra of speakers and grouped into different instrumental groups. Spatial weights can then be used to ensure that a source is spatialised among members of one group only. This allow a timbral and spatial orchestration to be prepared or composed beforehand, and then be adjusted to specific rooms for playback \cite{Lyon:2008spatial_orchestration}. 
+Within the tradition of the acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large number of speakers are used, sorted in several groups with different qualities and characteristics, thus allowing a scripting of sound space according to the spectral content of the projected music \cite{Prager:2002acousmatique}. If the loudspeaker setup consists of different kinds of speakers with differing spectral properties, they can be thought of as an orchestra of speakers and be organized into different instrumental groups. Spatial weights can then be used to ensure that a source is spatialised among members of one group only. This allow a timbral and spatial orchestration to be prepared or composed prior to performance, and then be adjusted to the specific room used for playback \cite{Lyon:2008spatial_orchestration}. 
 
-In installations or museum spaces spatial weights can be used to confine sources to restricted areas. For instance one source can be diffused in one room only while another source with a different set of spatial weights is permitted to move between several or all rooms.
+In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. For instance one source can be diffused in one room only while another source with a different set of spatial weights might be permitted to move between several or all rooms.
 
 Spatial weights can be changed dynamically, thus allowing smooth transitions from one state to another. 
 
