--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -91,6 +91,8 @@
 
 
 
+% TODO: Write abstract!
+% TODO: Tim notes the spelling of spatialisation, instead of spatialization -- probably the latter is preferred?
 
 \begin{abstract}
 The abstract should be placed at the top left column and should contain
@@ -113,19 +115,23 @@ about 150 words.
 
 \section{Introduction}\label{sec:introduction}
 
-The use of multichannel and surround sound reproduction is getting ever more common, for consumer applications as well as musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers. A common assumption of techniques for spatialisation is that the position of the listener is known and fixed, and the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap} and first and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
+Multichannel and surround sound reproduction is becoming more common, both for consumer applications as well as for musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers.  Techniques for spatialisation commonly assume that the position of a listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap}, as well as both first-order and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
 
-Wave field synthesis (WFS) is a noticeable exception to the above sweet spot restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrary large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
+Wave field synthesis (WFS) is a noticeable exception to the aforementioned "sweet spot" restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
 
-For musical and artistic use a number of practical limitations tend to restrict what spatialisation techniques are feasible to use.
+A number of practical limitations tend to restrict what spatialisation techniques are feasible for musical and artistic use.
 
+% TODO: Tim thinks this is sentence is very awkward.
 Unless working on a site providing a permanent setup for wave field synthesis, the high number of loudspeakers required might render WFS impractical for financial reasons as well as time constraints.
 
-For real-time music and sound purposes the relative low CPU requirements of matrix-based spatialisation techniques seems to make them popular choices, and VBAP as well as first and higher order ambisonics are readily available for use in common software environments for real-time processing such as Max/MSP \cite{Pulkki:2000vbap_max, Schacher:2006ambi_max, Neukom:2008ambipan}.
+% TODO: Tim asks " do you always need to say 'first and higher order ambisonics'? " -- it seems strange and is grammatically awkward.  Can you just use "ambisonics" ?  You already said first and higher once before...
+For real-time music and sound purposes, the relatively low CPU requirements of matrix-based spatialisation techniques seem to make them popular choices. 
+VBAP as well as first and higher order ambisonics are readily available for use in common software environments for real-time processing such as Max/MSP \cite{Pulkki:2000vbap_max, Schacher:2006ambi_max, Neukom:2008ambipan}.
 
-The requirements imposed by VBAP and ambisonics with respect to listeners being restricted to a relatively small listening area surrounded by loudspeakers might be impractical or even undesired in practical applications. In a concert situation ideally all of the audience should have a detailed impression of the spatial content of the music, not only the ones sitting at the middle of the hall. In a sound installation context one might want the audience to be able to move around the space \cite{lossius:2008installations}. And finally, for practical and/or artistic reasons it might not be possible or desired to have loudspeakers arranged in a ring or sphere.
+Among the requirements imposed by VBAP and ambisonics, are that the listeners are restricted to a relatively small listening area surrounded by loudspeakers.  These requirements might be unfeasible or undesired in practical applications.  In the ideal concert situation the entire audience should have a detailed impression of the spatial content of the music, not limiting the impression to those sitting in the middle of the concert hall. In a sound installation context one might want the audience to be able to move around the space \cite{lossius:2008installations}.  Finally, for pragmatic and/or artistic reasons it might not be possible or desired to have loudspeakers arranged in a ring or a sphere.
 
-Distance-based amplitude panning (DBAP) is a matrix-based spatialisation technique that takes the actual positions of the speakers as the point of departure while making no assumptions as to where the listeners are situated. This makes DBAP useful for a number of real-world situations such as music for concerts, works for stage, installations and museum sound design where predefined geometric speaker layouts might not apply.
+% CHANGED: Tim capitalized the DBAP words -- if not desired, feel free to undo it
+Distance-Based Amplitude Panning (DBAP) is a matrix-based spatialisation technique that takes the actual positions of the speakers in space as the point of departure, while making no assumptions as to where the listeners are situated. This makes DBAP useful for a number of real-world situations including music for concerts, works for stage, installations, and museum sound design where predefined geometric speaker layouts might not apply.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
