Changing titles of section 3
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4697 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -262,9 +262,9 @@ The authors are also looking forward to obtaining a better numerical representat
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{extending DBAP}
+\section{Implementation and visualisation}
 
-
+\subsection{Implementation}
 
 \subsection{Visual representation}
 
