Work on section 3
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4699 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-09 00:35:05 +0100 
+%% Created for lossius at 2009-02-09 03:38:39 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Zicarelli:1998,
+	Author = {Zicarelli, David},
+	Booktitle = {Proceedings of the 1998 International Computer Music Conference},
+	Date-Added = {2009-02-09 03:38:35 +0100},
+	Date-Modified = {2009-02-09 03:38:35 +0100},
+	Keywords = {Max},
+	Pages = {463-466},
+	Publisher = {San Francisco: International Computer Music Association},
+	Title = {An extensible real-time signal processing environment for {Max}},
+	Year = {1998}}
+
+@inproceedings{Puckette:1988patcher,
+	Address = {San Francisco},
+	Author = {Puckette, Miller},
+	Booktitle = {The International Computer Music Conference},
+	Date-Added = {2009-02-09 03:37:14 +0100},
+	Date-Modified = {2009-02-09 03:37:14 +0100},
+	Editor = {Lischka, C. and Fritsch, J.},
+	Keywords = {Max},
+	Pages = {420-429},
+	Publisher = {The International Computer Music Association},
+	Title = {The Patcher},
+	Year = {1988}}
 
 @article{Litovsky:1999precedence_effect,
 	Abstract = {In a reverberant environment, sounds reach the ears through several paths. Although the direct sound is followed by multiple reflections, which would be audible in isolation, the first-arriving wavefront dominates many aspects of perception. The "precedence effect" refers to a group of phenomena that are thought to be involved in resolving competition for perception and localization between a direct sound and a reflection. This article is divided into five major sections. First, it begins with a review of recent work on psychoacoustics, which divides the phenomena into measurements of fusion, localization dominance, and discrimination suppression. Second, buildup of precedence and breakdown of precedence are discussed. Third measurements in several animal species, developmental changes in humans, and animal studies are described. Fourth, recent physiological measurements that might be helpful in providing a fuller understanding of precedence effects are reviewed. Fifth, a number of psychophysical models are described which illustrate fundamentally different approaches and have distinct advantages and disadvantages. The purpose of this review is to provide a framework within which to describe the effects of precedence and to help in the integration of data from both psychophysical and physiological experiments. It is probably only through the combined efforts of these fields that a full theory of precedence will evolve and useful models will be developed.},
