--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -93,6 +93,7 @@
 
 % TODO: Write abstract!
 % TODO: Tim notes the spelling of spatialisation, instead of spatialization -- probably the latter is preferred?
+% TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
 
 \begin{abstract}
 The abstract should be placed at the top left column and should contain
@@ -117,7 +118,7 @@ about 150 words.
 
 Multichannel and surround sound reproduction is becoming more common, both for consumer applications as well as for musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers.  Techniques for spatialisation commonly assume that the position of a listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap}, as well as both first-order and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
 
-Wave field synthesis (WFS) is a noticeable exception to the aforementioned "sweet spot" restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
+Wave field synthesis (WFS) is a noticeable exception to the aforementioned ``sweet spot'' restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
 
 A number of practical limitations tend to restrict what spatialisation techniques are feasible for musical and artistic use.
 
@@ -144,17 +145,19 @@ Distance-Based Amplitude Panning (DBAP) is a matrix-based spatialisation techniq
 
 \subsection{Fundamentals}
 
-\textit{Distance-based amplitude panning (DBAP)} extends the principle of equal intensity panning from a pair of speakers to a loudspeaker array of any size, with no \textit{a priori} assumptions to their positions in space or relative to each other.
+% TODO: Tim changed the capitalization above -- but here it is again.  They should be the same, so what should it be?
+% CHANGED: Tim changed a couple of places where the word 'setup' was used.  This is a bit colloquial.  I replaced it with the word 'model'.  Discard or consider as appropriate. 
 
-For simplicity the method will be discussed in terms of a two-dimensional setup with speakers and source all positioned in the same horizontal plane. This can easily be extended to three dimensions.
+\textit{Distance-based amplitude panning (DBAP)} extends the principle of equal intensity panning from a pair of speakers to a loudspeaker array of any size, with no \textit{a priori} assumptions about their positions in space or relative to each other.
+For simplicity, the method will be discussed in terms of a two-dimensional model with speakers and sources all positioned in the same horizontal plane. This can be readily extended to three dimensions.
 
-The position of the virtual source will be described in terms of Cartesian coordinates $(x_{s}, y_{s})$. For a setup with $N$ speakers, the position of the $i$th speaker is given as $(x_{i}, y_{i})$. The distance from source to each of the speakers can then be calculated as
+The position of a virtual source will be described in terms of Cartesian coordinates $(x_{s}, y_{s})$. For a model with $N$ speakers, the position of the $i$th speaker is given as $(x_{i}, y_{i})$. The distance from a source to each of the speakers can then be calculated as
 
 \begin{equation} \label{eq:distance}
 d_{i} = \sqrt{ {(x_{i} - x_{s})}^2 + {(y_{i} - y_{s})}^2 } \qquad \textrm{for } 1 \leq i \leq N \textrm{ .}
 \end{equation}
 
-For simplicity the source is assumed to have unity amplitude. DBAP makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. This can be considered an extension of the principle of constant intensity panning for stereo to multichannel setups. If the amplitude of the $i$th speaker is $v_{i}$, this implies
+For simplicity, the source is presumed as having unity amplitude. DBAP then makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. This can be considered an extension of the principle of constant intensity panning for stereo to multichannel setups. If the amplitude of the $i$th speaker is $v_{i}$, this implies
 
 \begin{equation} \label{eq:constant_intensity}
 I = \sum_{i=1}^{N} {v_{i}}^2 = 1
@@ -166,6 +169,8 @@ Secondly, it is assumed that all speakers are active at all times, and the relat
 v_{i} = \frac{k}{2 d_{i} a} 
 \end{equation}
 
+% TODO: Tim notes that 'depending' isn't quite the right word in this sentence.  In both places it should be a different word (not certain about the replacement yet)
+% TODO: Maybe the correct work is 'calculated from' ?
 where $k$ is a coefficient depending on the position of the source and all speakers, while $a$ is a coefficient depending on the rolloff $R$ in decibels per doubling of distance:
 
 \begin{equation} \label{eq:rolloff}
@@ -209,7 +214,7 @@ When the virtual source is located at the exact position of one of the loudspeak
 d_{i} = \sqrt{ {(x_{i} - x_{s})}^2 + {(y_{i} - y_{s})}^2 + {r_{s}}^2}
 \end{equation}
 
-The blur coefficient $r_{s}$ can be understood as a displacement in vertical position introduced between the source and the speakers, as if the speakers are positioned at $z_{i}=0$ while the vertical position of the source is $z_{s}=r_{s}$. The larger $r$ gets, the less the source will be able to gravitate towards one speaker only. There should be a potential for using this artistically in terms of contrasts between highly articulated or diffuse spatial positioning of sources. However there is a limitation to how blurred sources can be perceived to be. While all speakers will approach the same level as $ r_{s} \rightarrow \infty $, practical experience indicate that the precedence effect will come into play, causing the perceived direction of the source to gravitate towards the speaker(s) closest to the listener \cite{Litovsky:1999precedence_effect}.
+The blur coefficient $r_{s}$ can be understood as a displacement in vertical position introduced between the source and the speakers, as if the speakers are positioned at $z_{i}=0$ while the vertical position of the source is $z_{s}=r_{s}$. The larger $r$ gets, the less the source will be able to gravitate towards one speaker only. There should be a potential for using this artistically to create contrasts between highly articulated or diffuse spatial positioning of sources.  There is a limitation, however, to how blurred the sources can be perceived.  While all speakers will approach the same level as $ r_{s} \rightarrow \infty $, practical experience indicates that the precedence effect will come into play, causing the perceived direction of the source to gravitate towards the speaker(s) closest to the listener \cite{Litovsky:1999precedence_effect}.
 
 % TODO: Discuss variance
 
@@ -217,11 +222,13 @@ The blur coefficient $r_{s}$ can be understood as a displacement in vertical pos
 
 \subsection{Sources positioned beyond the field of speakers}
 
-The assumptions that DBAP are based on falls apart when sources move outside the field of speakers. As a source position moves away from the speakers, the relative difference in distance from source to each of the speakers diminishes, resulting in less and less difference in levels between the speakers, in much the same way as discussed for spatial blur in the previous subsection. In order to compensate for this, additional steps needs to be taken when the source move outside the field of speakers.
+%TODO: Tim asks "should you be saying speaker or loudspeaker?"
 
-From the description of louspeaker positions the \emph{convex hull} of the field of speakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}.
+The presuppositions upon which DBAP is based do not hold true when sources move outside of the field of speakers. As the distance of a source position from a speaker increases, the relative difference in distance from source to each of the speakers diminishes, resulting in progressively less difference in levels between the speakers.  This occurs in much the same manner as discussed for spatial blur in the previous subsection. To compensate for this, additional steps needs to be taken when the source moves outside the field of speakers.
 
-For each source position it is first determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps needs to be taken. If the source is positioned outside the convex hull, the projection of the point onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for the projected point in further DBAP calculations. In addition the distance from the source position to the convex hull is returned. This value can be used for optional additional spatial processing such as gain attenuation, air filtering, doppler effect or gradual introduction of reverb with increasing distance from the hull.
+From the description of loudspeaker positions the \emph{convex hull} of the field of speakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}.
+
+For each source position it is first determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps needs to be taken. If the source is positioned outside the convex hull, the projection of the point onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for the projected point on the hull in subsequent DBAP calculations. In addition, the distance from the source position to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, doppler effect, or gradual introduction of reverb with increasing distance from the hull.
 
 
 
