--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -255,8 +255,7 @@ In installations or museum spaces spatial weights can also be used to confine so
 
 Spatial weights can be changed dynamically, thus allowing smooth transitions from one state to another. 
 
-
-This weight parameter, after being submitted to listening tests and visualization (as described below in\ref{subsection:Visual representation}), showed up as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
+This weight parameter, after being submitted to listening tests and visualization (as described below in \ref{sec:visual_representation}), showed up as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
 
 The authors are also looking forward to obtaining a better numerical representation of this parameter, in particular of its range and transfer function, as well as to achieve a management of the interdependence of all weights, in order to make its manipulation more intuitive for the user.
 
@@ -280,6 +279,7 @@ In addition a Jamoma DBAP module is developed with a similar interface as other 
 
 
 \subsection{Visual representations}
+\label{sec:visual_representation}
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.8]{LoudspeakerPositions}}
@@ -287,35 +287,35 @@ In addition a Jamoma DBAP module is developed with a similar interface as other 
 \label{speaker_positions}
 \end{figure}
 
-In order to provide users with an intuitive understanding and manipulation of the algorithm, a visual representation of the behaviour of the algorithm has been developed, using gradients to represent the ``predominance'' zone of each speaker. This is intended to give a more intuitive manipulation of source positions, as well as management of parameters such as spatial blur, rolloff and spatial weights.
+In order to provide users with an intuitive understanding of the algorithm, a visual representation of the behaviour of the algorithm has been developed, using gradients to represent the ``predominance'' zone of each speaker. This is also intended to give a more intuitive manipulation of source positions, as well as management of parameters such as spatial blur, rolloff and spatial weights.
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk4_r_6_b_0}}
 \caption{{\it Representation of the levels 2D distribution for speaker 4. Parameter values are $6$ dB for roll off, and $0$ for blur}}  
-\label{1spk}
+\label{fig:1spk}
 \end{figure}
 
-For each pixel of a selected view matrix, the pixel value is set to the squared amplitude returned by the dbap algorithm if the source was located at this position. The visual result in figure \ref{1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to 1. and the darker ones are positions where amplitudes are close to 0. As expected, the further away the source is from the loudspeaker, the less is the amplitude. However the presence of ``digs'' in the spatial distribution of the amplitude response illustrates how the DBAP algorithm works when a source moves between several loudspeakers. The graphical information provides the user with a kind of hitmap assisting in space scripting and performing.
-
-But those pictures of spatial response of each loudspeaker need to be shown together in one visualization. The layout “fusion” method chosen is a max operation between each pixel of each pictures. The graphical result shows straight segmented parts in space corresponding to every spatial influence zones of loudspeakers. Here the darker pixels have to be explain as positions where the source is equal mixed between the closest loudspeakers. Figures \ref{figure:allspk1}, \ref{figure:allspk2}, \ref{figure:allspk3} illustrate several settings of rolloff and blur parameters on all loudspeakers. 
+For each pixel of a selected view matrix, the pixel value is set to the squared amplitude returned by the dbap algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker ones are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker, the less is the amplitude. However the presence of ``digs'' in the spatial distribution of the amplitude response illustrates how the DBAP algorithm works when a source moves between several loudspeakers. The graphical information provides the user with a kind of hitmap assisting in space scripting and performing.
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_2_b_0}}
-\caption{{\it Representation of the 2D distribution of levels for all speakers - parameter values are 2dB for rolloff, and 0. for blur}}  
-\label{allspk1}
+\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are $2$ dB for rolloff, and $0$ for blur}}  
+\label{fig:allspk1}
 \end{figure}
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_6_b_0}}
-\caption{{\it Representation of the 2D distribution of levels for all speakers - parameter values are 6dB for rolloff, and 0. for blur}}  
-\label{allspk2}
+\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are $6$ dB for rolloff, and $0$ for blur}}  
+\label{fig:allspk2}
 \end{figure}
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_6_b_0_2}}
-\caption{{\it Representation of the 2D distribution of levels for all speakers - parameter values are 6dB for rolloff, and 0.2 for blur}}  
-\label{allspk3}
+\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are $6$ dB for rolloff, and $0.2$ for blur}}  
+\label{fig:allspk3}
 \end{figure}
+
+A visualisation of the response ranges for all speakers can be created by combining all figures of the same kind as fig. \ref{fig:1spk}, and then find maximum amplitude for 2D-position. The graphical result shows straight segmented parts in space corresponding to every spatial influence zones of loudspeakers. Here the darker pixels have to be explain as positions where the source is equal mixed between the closest loudspeakers. Figures \ref{fig:allspk1}, \ref{fig:allspk2} and \ref{fig:allspk3} illustrate several settings of varying roll off and blur values. 
 
 Figure \ref{figure:5spk_weights} illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
 
@@ -326,9 +326,6 @@ Figure \ref{figure:5spk_weights} illustrates a weights preset that keeps only fi
 \end{figure}
 
 These pictures are generated in realtime by the algorithm, and thus be used as an user interface for source positioning, e.g. for mouse interaction, or even better for tactile-screen interaction. 
-
-\section{Implementation}
-
 
 
 \section{Further development}
