Work on 3.1. Adding info on mute and gain
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4702 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -272,7 +272,7 @@ The authors are also looking forward to obtaining a better numerical representat
 
 \subsection{Implementation}
 
-DBAP is implemented as a C/C++ external for the real-time multimedia graphical environment Max/MSP \cite{Puckette:1988patcher, Zicarelli:1998} as part of the Jamoma framework \cite{Place:2006jamoma}, available under the GNU LGPL license.
+DBAP is implemented as a C/C++ external for the real-time multimedia graphical environment Max/MSP \cite{Puckette:1988patcher, Zicarelli:1998} as part of the Jamoma framework \cite{Place:2006jamoma}, available under the GNU LGPL license. In addition to the features discussed already, the input gain of each source can be controlled prior to the DBAP processing, and the source can be muted.
 
 In addition a Jamoma DBAP module is developed with a similar interface as other Jamoma spatialisation modules for e.g. VBAP and ambisonics, according to the SpatDIF initiative \cite{Peters:2008spatdif}.
 
